[tool.poetry]
name = "surfspot"
version = "0.1.0"
description = "App for sharing surf spots with colleague surfers"
authors = ["Amir Dayagi <amir.dayagi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10"
pandas = "^2.2.0"
datadog = "^0.48.0"
annotated-types = "0.6.0"
blinker = "1.7.0"
click = "8.1.7"
dnspython = "2.5.0"
email-validator = "1.1.2"
flask = "3.0.2"
flask-sqlalchemy = "3.1.1"
greenlet = "3.0.3"
idna = "3.6"
importlib-metadata = "7.0.1"
inflect = "7.0.0"
isbnlib = "3.10.3"
iso3166 = "1.0.1"
itsdangerous = "2.1.2"
jinja2 = "3.1.3"
markupsafe = "2.1.5"
psycopg2-binary = "2.9.9"
py-moneyed = "0.8.0"
pycountry = "23.12.11"
pydantic = "2.6.1"
pydantic-core = "2.16.2"
python-dotenv = "1.0.1"
pytz = "2020.1"
schwifty = "2020.9.0"
sqlacodegen-v2 = "0.1.4"
sqlalchemy = "2.0.27"
typing-extensions = "4.9.0"
werkzeug = "3.0.1"
zipp = "3.17.0"
pyjwt = "*"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
